fix p-panel word-wrap in style.css

--- a/temple-fontend/src/styles.css
+++ b/temple-fontend/src/styles.css
@@ -142,6 +142,6 @@ body .ui-button.ui-state-default.ui-button-warning, body .ui-buttonset.ui-button
     word-wrap: break-word;
 
 }
-p-table{
+p-table , p-panel{
     word-wrap: break-word;
 }
